--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+.navbar-market{
+    background: rgb(19, 90, 48) !important;
 }
 
 @media screen and (max-width: 600px) { 
